--- a/package.json
+++ b/package.json
@@ -1,17 +1,56 @@
 {
-  "name": "mostaql",
+  "name": "nodejs-express-sequelize",
   "version": "1.0.0",
-  "description": "Mostaql is a freelancing platform and this is a clone project",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sequelize": "sequelize-cli-typescript",
+    "dev": "dotenv -- tsc-watch --sourceMap --onsuccess \"node --enable-source-maps dist/index.js\"",
+    "test": "jest",
+    "build": "tsc",
+    "lint": "eslint",
+    "migrate": "dotenv -- node migrate up",
+    "migrate:rollback": "dotenv -- node migrate down",
+    "migration:create": "dotenv -- node migrate create"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^5.1.0"
-  },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@eslint/js": "^9.27.0",
+    "@tsconfig/node22": "^22.0.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jest": "^29.5.14",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^22.17.1",
+    "@types/sequelize": "^4.28.20",
+    "@types/validator": "^13.15.2",
+    "dotenv-cli": "^8.0.0",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "globals": "^16.1.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
+    "sequelize-cli-typescript": "^3.2.0-c",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
+    "tsc-watch": "^6.3.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "morgan": "^1.10.1",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3",
+    "sequelize-typescript": "^2.1.6",
+    "umzug": "^3.8.2"
   }
 }
