--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "lint": "eslint",
     "migrate": "dotenv -- node migrate up",
     "migrate:rollback": "dotenv -- node migrate down",
-    "migration:create": "dotenv -- node migrate create"
+    "migration:create": "dotenv -- node migrate create",
+    "db:seed": "dotenv -- node seed",
+    "db:seed:rollback": "dotenv -- node seed undo",
+    "db:seed:create": "dotenv -- node seed create"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "@faker-js/faker": "^9.9.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
@@ -33,7 +37,7 @@
     "eslint-plugin-prettier": "^5.4.0",
     "globals": "^16.1.0",
     "jest": "^29.7.0",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "sequelize-cli-typescript": "^3.2.0-c",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
