--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "emitDecoratorMetadata": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist" ,"src/umzug.ts" , "src/migrations/**/*"]
+  
 }
